README discussion of Data added

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,23 +12,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'articleDetails' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_51719/2118681341.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0marticleDetails\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'articleDetails' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We have 3353 articles in our Corpus of data\n"
      ]
     }
    ],
    "source": [
-    "articleDetails"
+    "count = 0\n",
+    "for i in range(0, len(articleDetails['List Links'])):\n",
+    "    count += len(articleDetails['List Links'][i])\n",
+    "            \n",
+    "print(\"We have \" + str(count) + \" articles in our Corpus of data\")"
    ]
   }
  ],
