Further code to use FastAI to prepare data that the neural net can understand

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "from fastai.text import *\n",
     "articleDetails = pd.read_pickle('article_details.pkl')"
    ]
   },
@@ -29,6 +30,47 @@
     "    count += len(articleDetails['List Links'][i])\n",
     "            \n",
     "print(\"We have \" + str(count) + \" articles in our Corpus of data\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "headlines = []\n",
+    "for i in range(0, len(articleDetails['List Links'])):\n",
+    "    for j in range(0, len(articleDetails['List Links'][i])):\n",
+    "        headlines.append(articleDetails['List Links'][i][j])\n",
+    "\n",
+    "headline_DF = pd.DataFrame()\n",
+    "headline_DF['headlines'] = headlines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'TextList' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_51719/3088384916.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m data = (TextList.from_df(headline_DF, cols='headlines')\n\u001b[0m\u001b[1;32m      2\u001b[0m                 \u001b[0;34m.\u001b[0m\u001b[0mrandom_split_by_pct\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m                \u001b[0;34m.\u001b[0m\u001b[0mlabel_for_lm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m                 .databunch(bs=48))\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'TextList' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "data = (TextList.from_df(headline_DF, cols='headlines')\n",
+    "                .random_split_by_pct(0.1)\n",
+    "               .label_for_lm()  \n",
+    "                .databunch(bs=48))\n",
+    "\n",
+    "data.show_batch()"
    ]
   }
  ],
