FastAI prediction working, now building up tooling

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,26 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.6.3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from fastai.text import *\n",
+    "from fastai import *\n",
     "articleDetails = pd.read_pickle('article_details.pkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,33 +44,366 @@
     "        headlines.append(articleDetails['List Links'][i][j])\n",
     "\n",
     "headline_DF = pd.DataFrame()\n",
-    "headline_DF['headlines'] = headlines"
+    "headline_DF['headlines_str'] = headlines"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'TextBlock' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_51719/3299128265.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m data = (TextBlock.from_df(headline_DF, cols='headlines')\n\u001b[0m\u001b[1;32m      2\u001b[0m                 \u001b[0;34m.\u001b[0m\u001b[0mrandom_split_by_pct\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m                \u001b[0;34m.\u001b[0m\u001b[0mlabel_for_lm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m                 .databunch(bs=48))\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'TextBlock' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
      ]
     }
    ],
    "source": [
-    "data = (TextBlock.from_df(headline_DF, cols='headlines')\n",
-    "                .random_split_by_pct(0.1)\n",
-    "                .label_for_lm()  \n",
-    "                .databunch(bs=48))\n",
+    "# Average length of headline\n",
+    "sum_lens = 0\n",
+    "for i in range(0, len(headlines)):\n",
+    "    sum_lens += len(headlines[i].split())\n",
+    "    \n",
+    "average_length = int(sum_lens / len(headlines))\n",
+    "print(average_length)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['Labour', 125], ['WATCH:', 75], ['Corbyn', 60], ['BBC', 55], ['The', 42], ['Tory', 40], ['EU', 30], ['PMQs', 30], ['Owen', 28], ['Diane', 28]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Most Popular first words\n",
+    "def find_in_list_of_tuple(list, target):\n",
+    "    return_value = False\n",
+    "    for j in range(0, len(list)):\n",
+    "        if list[j][0] == target:\n",
+    "            return_value = True\n",
+    "    return return_value\n",
     "\n",
-    "data.show_batch()"
+    "def find_index_in_list_of_tuple(list, target):\n",
+    "    return_value = False\n",
+    "    for j in range(0, len(list)):\n",
+    "        if list[j][0] == target:\n",
+    "            return_value = j\n",
+    "    return return_value\n",
+    "\n",
+    "most_popular_first_word = []\n",
+    "def generateLeading\n",
+    "for i in range(0, len(headlines)):\n",
+    "    first_word_of_string = headlines[i].split()[0]\n",
+    "    if find_in_list_of_tuple(most_popular_first_word, first_word_of_string) == True:\n",
+    "        # Word has already been added to most_popular_first_word\n",
+    "        most_popular_first_word[find_index_in_list_of_tuple(most_popular_first_word, first_word_of_string)][1] += 1\n",
+    "    else:\n",
+    "        most_popular_first_word.append([first_word_of_string, 1])\n",
+    "\n",
+    "most_popular_first_word = sorted(most_popular_first_word, key=lambda tup: tup[1], reverse=True)\n",
+    "\n",
+    "print(most_popular_first_word[:10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<style>\n",
+       "    /* Turns off some styling */\n",
+       "    progress {\n",
+       "        /* gets rid of default border in Firefox and Opera. */\n",
+       "        border: none;\n",
+       "        /* Needs to be in here for Safari polyfill so background images work as expected. */\n",
+       "        background-size: auto;\n",
+       "    }\n",
+       "    .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n",
+       "        background: #F44336;\n",
+       "    }\n",
+       "</style>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "dls = TextDataLoaders.from_df(headline_DF, path=\"./\", text_col='headlines_str', valid_pct=0.3, is_lm=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<style>\n",
+       "    /* Turns off some styling */\n",
+       "    progress {\n",
+       "        /* gets rid of default border in Firefox and Opera. */\n",
+       "        border: none;\n",
+       "        /* Needs to be in here for Safari polyfill so background images work as expected. */\n",
+       "        background-size: auto;\n",
+       "    }\n",
+       "    .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n",
+       "        background: #F44336;\n",
+       "    }\n",
+       "</style>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      <progress value='105070592' class='' max='105067061' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      100.00% [105070592/105067061 00:38<00:00]\n",
+       "    </div>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "model = language_model_learner(dls, AWD_LSTM)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<style>\n",
+       "    /* Turns off some styling */\n",
+       "    progress {\n",
+       "        /* gets rid of default border in Firefox and Opera. */\n",
+       "        border: none;\n",
+       "        /* Needs to be in here for Safari polyfill so background images work as expected. */\n",
+       "        background-size: auto;\n",
+       "    }\n",
+       "    .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n",
+       "        background: #F44336;\n",
+       "    }\n",
+       "</style>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: left;\">\n",
+       "      <th>epoch</th>\n",
+       "      <th>train_loss</th>\n",
+       "      <th>valid_loss</th>\n",
+       "      <th>time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>4.986782</td>\n",
+       "      <td>4.678916</td>\n",
+       "      <td>02:52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>4.901416</td>\n",
+       "      <td>4.501376</td>\n",
+       "      <td>02:44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>4.796350</td>\n",
+       "      <td>4.389595</td>\n",
+       "      <td>03:03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>4.735701</td>\n",
+       "      <td>4.342404</td>\n",
+       "      <td>02:47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>4.676809</td>\n",
+       "      <td>4.335111</td>\n",
+       "      <td>03:04</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "model.fit_one_cycle(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<style>\n",
+       "    /* Turns off some styling */\n",
+       "    progress {\n",
+       "        /* gets rid of default border in Firefox and Opera. */\n",
+       "        border: none;\n",
+       "        /* Needs to be in here for Safari polyfill so background images work as expected. */\n",
+       "        background-size: auto;\n",
+       "    }\n",
+       "    .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n",
+       "        background: #F44336;\n",
+       "    }\n",
+       "</style>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<style>\n",
+       "    /* Turns off some styling */\n",
+       "    progress {\n",
+       "        /* gets rid of default border in Firefox and Opera. */\n",
+       "        border: none;\n",
+       "        /* Needs to be in here for Safari polyfill so background images work as expected. */\n",
+       "        background-size: auto;\n",
+       "    }\n",
+       "    .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n",
+       "        background: #F44336;\n",
+       "    }\n",
+       "</style>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Labour:\n",
+      "\tWith length of 14:\n",
+      "\t\tLabour Health Control Act of the British government long - standing\n",
+      "\n",
+      "WATCH:\n",
+      "\tWith length of 14:\n",
+      "\t\tWATCH : How It Goes to School Home Road\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def getGeneration(leading_string_arr, number_of_words=10, min_length=1, max_length=3, number_of_generations=3):\n",
+    "    model_output = \"\"\n",
+    "    for i in range(0, number_of_words):\n",
+    "        if i != 0:\n",
+    "            model_output = model_output + \"\\n\"\n",
+    "        if leading_string_arr[i][0][-1] == \":\":\n",
+    "            model_output = model_output + leading_string_arr[i][0] + \"\\n\"\n",
+    "        else:\n",
+    "            model_output = model_output + leading_string_arr[i][0] + \":\\n\"\n",
+    "        for j in range(min_length, max_length):\n",
+    "            num_words = int(average_length*(j+1))\n",
+    "            model_output = model_output + \"\\t\" + \"With length of \" + str(num_words) + \":\\n\"\n",
+    "            for k in range(0, number_of_generations):\n",
+    "                with model.no_bar(), model.no_logging():\n",
+    "                    model_output = model_output + \"\\t\\t\" + model.predict(leading_string_arr[i][0], n_words=num_words) + \"\\n\"\n",
+    "            \n",
+    "    print(model_output)\n",
+    "    \n",
+    "getGeneration(most_popular_first_word, 2, 1, 2, 1)"
    ]
   }
  ],
