Much more work on tooling

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -72,17 +72,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['Labour', 125], ['WATCH:', 75], ['Corbyn', 60], ['BBC', 55], ['The', 42], ['Tory', 40], ['EU', 30], ['PMQs', 30], ['Owen', 28], ['Diane', 28]]\n"
+      "Cat\n",
+      "3\n",
+      "Cat and dog\n"
      ]
     }
    ],
+   "source": [
+    "list1 = [\"Cat\"]\n",
+    "print(' '.join(list1))\n",
+    "print(len(' '.join(list1)))\n",
+    "\n",
+    "list2 = [\"Cat\", \"and\", \"dog\"]\n",
+    "print(' '.join(list2[:3+1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Most Popular first words\n",
     "def find_in_list_of_tuple(list, target):\n",
@@ -99,19 +115,45 @@
     "            return_value = j\n",
     "    return return_value\n",
     "\n",
-    "most_popular_first_word = []\n",
-    "def generateLeading\n",
-    "for i in range(0, len(headlines)):\n",
-    "    first_word_of_string = headlines[i].split()[0]\n",
-    "    if find_in_list_of_tuple(most_popular_first_word, first_word_of_string) == True:\n",
-    "        # Word has already been added to most_popular_first_word\n",
-    "        most_popular_first_word[find_index_in_list_of_tuple(most_popular_first_word, first_word_of_string)][1] += 1\n",
-    "    else:\n",
-    "        most_popular_first_word.append([first_word_of_string, 1])\n",
     "\n",
-    "most_popular_first_word = sorted(most_popular_first_word, key=lambda tup: tup[1], reverse=True)\n",
+    "def generateLeadingStringArray(num_words):\n",
+    "    local_arr = []\n",
+    "    for i in range(0, len(headlines)):\n",
+    "        first_word_of_string = ' '.join(headlines[i].split()[:num_words])\n",
+    "        if find_in_list_of_tuple(local_arr, first_word_of_string) == True:\n",
+    "            # Word has already been added to local_arr\n",
+    "            local_arr[find_index_in_list_of_tuple(local_arr, first_word_of_string)][1] += 1\n",
+    "        else:\n",
+    "            local_arr.append([first_word_of_string, 1])\n",
     "\n",
-    "print(most_popular_first_word[:10])"
+    "    local_arr = sorted(local_arr, key=lambda tup: tup[1], reverse=True)\n",
+    "    \n",
+    "    return local_arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['Labour', 125], ['WATCH:', 75], ['Corbyn', 60], ['BBC', 55], ['The', 42]]\n",
+      "[['PMQs SKETCH:', 22], ['Owen Jones', 21], ['Diane Abbott', 19], ['Read in', 15], ['Tory MP', 12]]\n",
+      "[['Read in Full:', 14], ['+++ RESHUFFLE LIVE', 4], ['Channel 4 News', 4], ['READ IN FULL:', 3], ['EXCLUSIVE: Home Office', 3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "most_popular_first_word = generateLeadingStringArray(1)\n",
+    "most_popular_two_words = generateLeadingStringArray(2)\n",
+    "most_popular_three_words = generateLeadingStringArray(3)\n",
+    "\n",
+    "print(most_popular_first_word[:5])\n",
+    "print(most_popular_two_words[:5])\n",
+    "print(most_popular_three_words[:5])"
    ]
   },
   {
@@ -298,7 +340,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def namestr(obj, namespace):\n",
+    "    return [name for name in namespace if namespace[name] is obj]\n",
+    "\n",
+    "print()\n",
+    "\n",
+    "def getGeneration(leading_string_arr, number_of_words=10, min_length=1, max_length=3, number_of_generations=3):\n",
+    "    model_output = \"\"\n",
+    "    model_output = model_output + \"----------------\\n\"\n",
+    "    model_output = model_output + \"Using the array: \" + namestr(leading_string_arr, globals())[0] + \"\\n\"\n",
+    "    for i in range(0, number_of_words):\n",
+    "        if leading_string_arr[i][0][-1] == \":\":\n",
+    "            model_output = model_output + leading_string_arr[i][0] + \"\\n\"\n",
+    "        else:\n",
+    "            model_output = model_output + leading_string_arr[i][0] + \":\\n\"\n",
+    "        for j in range(min_length, max_length):\n",
+    "            num_words = int(average_length*(j+1))\n",
+    "            model_output = model_output + \"\\t\" + \"With length of \" + str(num_words) + \":\\n\"\n",
+    "            for k in range(0, number_of_generations):\n",
+    "                with model.no_bar(), model.no_logging():\n",
+    "                    model_output = model_output + \"\\t\\t\" + model.predict(leading_string_arr[i][0], n_words=num_words) + \"\\n\"\n",
+    "            \n",
+    "    print(model_output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -334,6 +414,18 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------------\n",
+      "Using the array: most_popular_first_word\n",
+      "Labour:\n",
+      "\tWith length of 14:\n",
+      "\t\tLabour Stand at The End of Time Team In\n",
+      "\n"
+     ]
     },
     {
      "data": {
@@ -373,37 +465,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Labour:\n",
+      "---------------\n",
+      "Using the array: most_popular_two_words\n",
+      "PMQs SKETCH:\n",
       "\tWith length of 14:\n",
-      "\t\tLabour Health Control Act of the British government long - standing\n",
-      "\n",
-      "WATCH:\n",
-      "\tWith length of 14:\n",
-      "\t\tWATCH : How It Goes to School Home Road\n",
+      "\t\tpmqs SKETCH : Christmas Time Lies Last Time In Canada\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "def getGeneration(leading_string_arr, number_of_words=10, min_length=1, max_length=3, number_of_generations=3):\n",
-    "    model_output = \"\"\n",
-    "    for i in range(0, number_of_words):\n",
-    "        if i != 0:\n",
-    "            model_output = model_output + \"\\n\"\n",
-    "        if leading_string_arr[i][0][-1] == \":\":\n",
-    "            model_output = model_output + leading_string_arr[i][0] + \"\\n\"\n",
-    "        else:\n",
-    "            model_output = model_output + leading_string_arr[i][0] + \":\\n\"\n",
-    "        for j in range(min_length, max_length):\n",
-    "            num_words = int(average_length*(j+1))\n",
-    "            model_output = model_output + \"\\t\" + \"With length of \" + str(num_words) + \":\\n\"\n",
-    "            for k in range(0, number_of_generations):\n",
-    "                with model.no_bar(), model.no_logging():\n",
-    "                    model_output = model_output + \"\\t\\t\" + model.predict(leading_string_arr[i][0], n_words=num_words) + \"\\n\"\n",
-    "            \n",
-    "    print(model_output)\n",
-    "    \n",
-    "getGeneration(most_popular_first_word, 2, 1, 2, 1)"
+    "getGeneration(most_popular_first_word)\n",
+    "getGeneration(most_popular_two_words)\n",
+    "getGeneration(most_popular_three_words)"
    ]
   }
  ],
