Trying to tease out bug around recieving results from model

--- a/large_analysis.ipynb
+++ b/large_analysis.ipynb
@@ -2544,8 +2544,8 @@
     }
    ],
    "source": [
-    "getGeneration(most_popular_first_word)\n",
-    "#getGeneration(most_popular_two_words)\n",
+    "#getGeneration(most_popular_first_word)\n",
+    "getGeneration(most_popular_two_words)\n",
     "#getGeneration(most_popular_three_words)"
    ]
   }
