--- a/large_analysis.ipynb
+++ b/large_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bs4 import BeautifulSoup\n",
+    "from datetime import datetime\n",
+    "import requests\n",
+    "\n",
+    "# Function to go back and fill in headlines, and then re-export it as pkl!\n",
+    "indexes_where_bad_headline = articleDetails[articleDetails['Headline'] == \"\"].index\n",
+    "\n",
+    "for i in range(0, len(indexes_where_bad_headline)):\n",
+    "    link = articleDetails['Link'][indexes_where_bad_headline[i]]\n",
+    "\n",
+    "    page = requests.get(link)\n",
+    "    soup = BeautifulSoup(page.content, \"html.parser\")\n",
+    "\n",
+    "    title = soup.find(\"v-card-title\", {\"class\": \"red accent-4 white--text d-block\"}).text.lstrip().rstrip()\n",
+    "    post_time = soup.find(\"span\", {\"class\": \"posted-on blue-grey--text text--darken-4\"}).text\n",
+    "    articleDetails['Headline'][indexes_where_bad_headline[i]] = title\n",
+    "    articleDetails['Post Time'][indexes_where_bad_headline[i]] = datetime.strptime(post_time, '%B %d %Y @ %H:%M')\n",
+    "    \n",
+    "articleDetails.to_pickle('headlines.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -142,127 +169,90 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>25793</th>\n",
-       "      <td>https://order-order.com/2013/11/13/wilfully-blind-watson/</td>\n",
-       "      <td></td>\n",
-       "      <td>2013-11-13 06:34:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26006</th>\n",
-       "      <td>https://order-order.com/2013/10/15/pps-resuffle-full-list/</td>\n",
-       "      <td></td>\n",
-       "      <td>2013-10-15 18:30:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26378</th>\n",
-       "      <td>https://order-order.com/2013/08/28/rumour-miliband-considers-abstaining/</td>\n",
-       "      <td></td>\n",
-       "      <td>2013-08-28 15:35:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26387</th>\n",
-       "      <td>https://order-order.com/2013/08/27/stay-classy-spain/</td>\n",
-       "      <td></td>\n",
-       "      <td>2013-08-27 16:08:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26435</th>\n",
-       "      <td>https://order-order.com/2013/08/19/andrew-rawnsley-still-on-holiday/</td>\n",
-       "      <td></td>\n",
-       "      <td>2013-08-19 13:27:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36895</th>\n",
-       "      <td>https://order-order.com/2007/10/17/1700-jobs-to-go-at-bbc/</td>\n",
-       "      <td></td>\n",
-       "      <td>2007-10-16 16:01:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36896</th>\n",
-       "      <td>https://order-order.com/2007/10/16/libdem-leadership-betting/</td>\n",
-       "      <td></td>\n",
-       "      <td>2007-10-16 14:14:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37549</th>\n",
-       "      <td>https://order-order.com/2006/12/15/friday-caption-contest-sith-edition/</td>\n",
-       "      <td></td>\n",
-       "      <td>2006-12-14 16:16:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37606</th>\n",
-       "      <td>https://order-order.com/2006/10/01/launch-trailer/</td>\n",
-       "      <td></td>\n",
-       "      <td>2006-10-01 18:34:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37780</th>\n",
-       "      <td>https://order-order.com/2004/01/09/about-guidos-blog/</td>\n",
-       "      <td></td>\n",
-       "      <td>NaT</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>109 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                                           Link  \\\n",
-       "25793                 https://order-order.com/2013/11/13/wilfully-blind-watson/   \n",
-       "26006                https://order-order.com/2013/10/15/pps-resuffle-full-list/   \n",
-       "26378  https://order-order.com/2013/08/28/rumour-miliband-considers-abstaining/   \n",
-       "26387                     https://order-order.com/2013/08/27/stay-classy-spain/   \n",
-       "26435      https://order-order.com/2013/08/19/andrew-rawnsley-still-on-holiday/   \n",
-       "...                                                                         ...   \n",
-       "36895                https://order-order.com/2007/10/17/1700-jobs-to-go-at-bbc/   \n",
-       "36896             https://order-order.com/2007/10/16/libdem-leadership-betting/   \n",
-       "37549   https://order-order.com/2006/12/15/friday-caption-contest-sith-edition/   \n",
-       "37606                        https://order-order.com/2006/10/01/launch-trailer/   \n",
-       "37780                     https://order-order.com/2004/01/09/about-guidos-blog/   \n",
-       "\n",
-       "      Headline            Post Time  \n",
-       "25793           2013-11-13 06:34:00  \n",
-       "26006           2013-10-15 18:30:00  \n",
-       "26378           2013-08-28 15:35:00  \n",
-       "26387           2013-08-27 16:08:00  \n",
-       "26435           2013-08-19 13:27:00  \n",
-       "...        ...                  ...  \n",
-       "36895           2007-10-16 16:01:00  \n",
-       "36896           2007-10-16 14:14:00  \n",
-       "37549           2006-12-14 16:16:00  \n",
-       "37606           2006-10-01 18:34:00  \n",
-       "37780                           NaT  \n",
-       "\n",
-       "[109 rows x 3 columns]"
+       "Empty DataFrame\n",
+       "Columns: [Link, Headline, Post Time]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Function to go back and fill in headlines, and then re-export it as pkl!\n",
-    "articleDetails[articleDetails['Headline'] == \"\"]"
+    "# https://order-order.com/2013/11/13/154334/\n",
+    "# https://order-order.com/2007/10/16/libdem-leadership-betting/\n",
+    "\n",
+    "articleDetails[articleDetails['Link'] == \"\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Link</th>\n",
+       "      <th>Headline</th>\n",
+       "      <th>Post Time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [Link, Headline, Post Time]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Fix NaT in Post Time column\n",
+    "articleDetails[articleDetails['Post Time'] == np.datetime64('NaT')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "We have 37772 headlines in our Corpus of data\n"
+      "We have 37781 headlines in our Corpus of data\n"
      ]
     }
    ],
