Struggling with Connection Reset Exceptions, wrote code to retry in the case of this error

--- a/large_analysis.ipynb
+++ b/large_analysis.ipynb
@@ -9,6 +9,9 @@
     "import pandas as pd\n",
     "from fastai import *\n",
     "from fastai.text.all import *\n",
+    "from bs4 import BeautifulSoup\n",
+    "from datetime import datetime\n",
+    "import requests\n",
     "articleDetails = pd.read_pickle('headlines.pkl')"
    ]
   },
@@ -112,34 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from bs4 import BeautifulSoup\n",
-    "from datetime import datetime\n",
-    "import requests\n",
-    "\n",
-    "# Function to go back and fill in headlines, and then re-export it as pkl!\n",
-    "indexes_where_bad_headline = articleDetails[articleDetails['Headline'] == \"\"].index\n",
-    "\n",
-    "for i in range(0, len(indexes_where_bad_headline)):\n",
-    "    link = articleDetails['Link'][indexes_where_bad_headline[i]]\n",
-    "\n",
-    "    page = requests.get(link)\n",
-    "    soup = BeautifulSoup(page.content, \"html.parser\")\n",
-    "\n",
-    "    title = soup.find(\"v-card-title\", {\"class\": \"red accent-4 white--text d-block\"}).text.lstrip().rstrip()\n",
-    "    post_time = soup.find(\"span\", {\"class\": \"posted-on blue-grey--text text--darken-4\"}).text\n",
-    "    articleDetails['Headline'][indexes_where_bad_headline[i]] = title\n",
-    "    articleDetails['Post Time'][indexes_where_bad_headline[i]] = datetime.strptime(post_time, '%B %d %Y @ %H:%M')\n",
-    "    \n",
-    "articleDetails.to_pickle('headlines.pkl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +155,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +169,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to go back and fill in headlines, and then re-export it as pkl!\n",
+    "def solve_empty_headlines():\n",
+    "    indexes_where_bad_headline = articleDetails[articleDetails['Headline'] == \"\"].index\n",
+    "\n",
+    "    for i in range(0, len(indexes_where_bad_headline)):\n",
+    "        link = articleDetails['Link'][indexes_where_bad_headline[i]]\n",
+    "\n",
+    "        page = requests.get(link)\n",
+    "        soup = BeautifulSoup(page.content, \"html.parser\")\n",
+    "\n",
+    "        title = soup.find(\"v-card-title\", {\"class\": \"red accent-4 white--text d-block\"}).text.lstrip().rstrip()\n",
+    "        post_time = soup.find(\"span\", {\"class\": \"posted-on blue-grey--text text--darken-4\"}).text\n",
+    "        articleDetails['Headline'][indexes_where_bad_headline[i]] = title\n",
+    "        articleDetails['Post Time'][indexes_where_bad_headline[i]] = datetime.strptime(post_time, '%B %d %Y @ %H:%M')\n",
+    "        \n",
+    "    articleDetails.to_pickle('headlines.pkl')\n",
+    "    \n",
+    "if len(articleDetails[articleDetails['Link'] == \"\"].index) != 0:\n",
+    "    solve_empty_headlines()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +236,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
